[package]
name = "tors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = { version = "0.15.1", registry = "shh" }
jwt = { version = "0.16.0", registry = "shh" }
rusqlite = { version = "0.32.1", registry = "shh" }
uuid = { version = "1.11.0", registry = "shh", features = ["v4"] }
