[package]
name = "tors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = { version = "0.15.1" }
jwt = "0.16.0"
poem = { version = "3.1.3", features = ["session"] }
serde = "1.0.214"
tokio = { version = "1.41.0", features = ["full", "rt"] }
tokio-rusqlite = "0.6.0"
uuid = { version = "1.11.0", features = ["v4"] }
